# cmake-test

./: CMakeLists.txt  main.cpp
include/: Foo.hpp
src/: CMakeLists.txt  Foo.cpp
